--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
 		<module>lecm-subscriptions</module>
 		<module>lecm-notifications</module>
 		<module>lecm-notifications-email</module>
+		<module>lecm-notifications-dashlet</module>
 		<module>lecm-business-journal</module>
 		<module>lecm-calendar</module>
 	</modules>
