--- a/lecm-notifications-dashlet/pom.xml
+++ b/lecm-notifications-dashlet/pom.xml
@@ -10,12 +10,13 @@
         <version>0.1.0</version>
     </parent>
 
-    <groupId>ru.it.lecm.notifications.email</groupId>
-    <artifactId>notifications-email</artifactId>
+    <groupId>ru.it.lecm.notifications.dashlet</groupId>
+    <artifactId>notifications-dashlet</artifactId>
     <packaging>pom</packaging>
-    <name>Logic ECM Notifications Email</name>
+    <name>Logic ECM Notifications Dashlet</name>
 
     <modules>
         <module>repo</module>
+        <module>share</module>
     </modules>
 </project>
