--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -163,6 +163,13 @@
 			<type>amp</type>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.notifications.channel.active</groupId>
+			<artifactId>notifications-active-channel-share</artifactId>
+			<version>${platform.version}</version>
+			<type>amp</type>
+			<scope>runtime</scope>
+		</dependency>
         <dependency>
             <groupId>ru.it.lecm.business-journal</groupId>
             <artifactId>business-journal-share</artifactId>
