--- a/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dashlet-business-journal/business-journal.get.properties
+++ b/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dashlet-business-journal/business-journal.get.properties
@@ -13,5 +13,7 @@ label.select.whose.control=On control
 
 label.select.all=All
 
+label.no.records = No records
+
 dashlet.help=
 dashlet.help.tooltip=Show help
