[ALF-299]  -  Экспорт лога
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1046 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/business-journal/datagrid/datagrid.get.properties
+++ b/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/business-journal/datagrid/datagrid.get.properties
@@ -46,3 +46,5 @@ button.clear=Clear
 label.keywords=Keywords
 
 logicecm.dictionary.view=View
+
+message.confirm.delete.group.description=Are you sure you want to delete items?
