--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -1,14 +1,14 @@
 header.orgstructure.label=Orgstructure
 header.orgstructure.description=Orgstructure
 
-page.orgstructure=Orgstructure
-page.organization=Organization
-page.org-positions=Positions
-page.org-roles=Roles
-page.org-employees=Employees
-page.staff-list=Staff List
-page.work-groups=Working Groups
-page.businessRoles=Business roles
+page.orgstructure=Orgstructure > Structure
+page.organization=Orgstructure > Organization
+page.org-positions=Orgstructure > Positions
+page.org-roles=Orgstructure > Roles
+page.org-employees=Orgstructure > Employees
+page.staff-list=Orgstructure > Staff List
+page.work-groups=Orgstructure > Working Groups
+page.businessRoles=Orgstructure > Business roles
 page.orgstructure.filter.label=(content filtered)
 
 search-block=Search
