--- a/lecm-subscriptions/repo/pom.xml
+++ b/lecm-subscriptions/repo/pom.xml
@@ -68,6 +68,11 @@
 			<artifactId>notifications-repo-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
     <!--
