Заданы выбранные по умолчакнию каналы подписки
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1055 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-notifications/repo/src/main/config/messages/notifications_type.properties
+++ b/lecm-notifications/repo/src/main/config/messages/notifications_type.properties
@@ -4,3 +4,5 @@ lecm-notf-type_dictionaryNotificationTypes.property.lecm-notf-type_code.title=Co
 lecm-notf-type_dictionaryNotificationTypes.property.lecm-notf-type_code.description=Code
 lecm-notf-type_dictionaryNotificationTypes.property.lecm-notf-type_spring-bean-id.title=Spring Bean ID
 lecm-notf-type_dictionaryNotificationTypes.property.lecm-notf-type_spring-bean-id.description=Spring Bean ID
+lecm-notf-type_dictionaryNotificationTypes.property.lecm-notf-type_default-select.title=Default select
+lecm-notf-type_dictionaryNotificationTypes.property.lecm-notf-type_default-select.description=Default select
