В подписках на тип в форме вокруг элементов добавлены рамки
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1061 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions.properties
+++ b/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions.properties
@@ -16,3 +16,5 @@ message.unsibscribe.success=Unsibscribe success
 
 header.subscriptions.label=Subscriptions
 header.subscriptions.description=Subscriptions
+info.input-text-info=Address
+info.table-info=Delivery methods
