добавление в INodeACLBuilder методов статической раздачи прав, + изменения в тестирующем REST-сервисе
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1063 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/repo/pom.xml
+++ b/lecm-delegation/repo/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>acegi-security</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
 		</dependency>
@@ -56,6 +61,13 @@
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.security</groupId>
+			<artifactId>lecm-security-repo</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 
