Исправлен packaging на корректный
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1067 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-security/repo/pom.xml
+++ b/lecm-security/repo/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>lecm-security-repo</artifactId>
-	<packaging>jar</packaging>
+	<packaging>amp</packaging>
 
 	<name>Logic ECM Security Repo</name>
 	<description>this is security repo module</description>
