--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -240,6 +240,13 @@
             <type>amp</type>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.security</groupId>
+            <artifactId>lecm-security-repo</artifactId>
+            <version>${platform.version}</version>
+            <type>amp</type>
+            <scope>runtime</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
