java зависимости вынесены в отдельный модуль
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1070 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/repo/pom.xml
+++ b/lecm-delegation/repo/pom.xml
@@ -63,7 +63,7 @@
 		</dependency>
 		<dependency>
 			<groupId>ru.it.lecm.security</groupId>
-			<artifactId>lecm-security-repo</artifactId>
+			<artifactId>lecm-security-repo-api</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
