--- a/lecm-security/repo/pom.xml
+++ b/lecm-security/repo/pom.xml
@@ -58,6 +58,11 @@
 			<artifactId>orgstructure-repo-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.security</groupId>
+			<artifactId>lecm-security-repo-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 
