[+] ALF-301 - Архивация лога
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1074 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/share/src/main/java/ru/it/lecm/business-journal/form/form.properties
+++ b/lecm-business-journal/share/src/main/java/ru/it/lecm/business-journal/form/form.properties
@@ -9,3 +9,7 @@ info.common-info=Base
 info.secondary-info=Secondary Objects
 
 lecm-busjournal_secondary-objects=Secondary Objects
+
+business-journal.archive=Archive
+button.archive=Archive
+archive.date = Archive older then
