[+] ALF-330. Права на документ находящийся в статусе для динамических ролей и их интеграция
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1081 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -39,5 +39,6 @@ lecm-stmeditor_model.property.lecm-stmeditor_actionScript.title=Script
 
 listconstraint.lecm-stmeditor_variableSettingType.VARIABLE=Variable
 listconstraint.lecm-stmeditor_variableSettingType.VALUE=Value
-listconstraint.lecm-stmeditor_permissionType.READ=Read
-listconstraint.lecm-stmeditor_permissionType.WRITE=Write
+listconstraint.lecm-stmeditor_permissionType.noaccess=No Access
+listconstraint.lecm-stmeditor_permissionType.readonly=Read
+listconstraint.lecm-stmeditor_permissionType.full=Write
