--- a/lecm-statemachine/repo/pom.xml
+++ b/lecm-statemachine/repo/pom.xml
@@ -62,6 +62,11 @@
 			<groupId>acegisecurity</groupId>
 			<artifactId>acegi-security</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.security</groupId>
+			<artifactId>lecm-security-repo-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
