ALF-300 3.3.4 Просмотр истории действий с документом из карточки документа
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1085 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/repo/src/main/config/messages/business-journal.properties
+++ b/lecm-business-journal/repo/src/main/config/messages/business-journal.properties
@@ -61,3 +61,6 @@ lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-second
 lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-secondaryObj4-associption=Secondary Object 4
 lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-secondaryObj5-assoc.title=Secondary Object 5
 lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-secondaryObj5-associption=Secondary Object 5
+
+lecm-busjournal-aspects_businessJournalAspectsModel.property.lecm-busjournal-aspects_history-list.title=History
+lecm-busjournal-aspects_businessJournalAspectsModel.property.lecm-busjournal-aspects_history-list.description=History
