--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -21,6 +21,7 @@ info.common-info=Common info
 info.personal-info=Personal info
 info.personal-positions=Employee Positions
 info.personal-groups=Employee Groups
+info.business-journal-history=History
 
 message.employee.add.success=Employee successfully added
 message.employee.add.failure=Employee add failed
