ALF-316: Добавлено всплывающее окно с уведомлениями активного канала
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1087 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-notifications-active-channel/repo/pom.xml
+++ b/lecm-notifications-active-channel/repo/pom.xml
@@ -11,8 +11,8 @@
 
     <artifactId>notifications-active-channel-repo</artifactId>
     <packaging>amp</packaging>
-    <name>Logic ECM Notifications Active Channel</name>
-    <description>Logic ECM Notifications Active Channel Project</description>
+    <name>Logic ECM Notifications Active Channel Repo</name>
+    <description>Logic ECM Notifications Active Channel Repo Project</description>
     <properties>
         <module.log.level>debug</module.log.level>
     </properties>
