--- a/lecm-notifications-active-channel/share/src/main/java/ru/it/lecm/notifications/notifications.properties
+++ b/lecm-notifications-active-channel/share/src/main/java/ru/it/lecm/notifications/notifications.properties
@@ -1,2 +1,5 @@
 header.notifications.label=Notifications
 header.notifications.description=Notifications
+
+notifications=Notifications
+notifications.button.close=Close
