lecm-security: отработка событий связанных с сотрудниками разделение lecm-security на api и repo
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1091 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-security/repo/pom.xml
+++ b/lecm-security/repo/pom.xml
@@ -60,7 +60,7 @@
 		</dependency>
 		<dependency>
 			<groupId>ru.it.lecm.security</groupId>
-			<artifactId>lecm-security-repo-api</artifactId>
+			<artifactId>lecm-security-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
