--- a/lecm-delegation/repo/pom.xml
+++ b/lecm-delegation/repo/pom.xml
@@ -63,7 +63,7 @@
 		</dependency>
 		<dependency>
 			<groupId>ru.it.lecm.security</groupId>
-			<artifactId>lecm-security-repo-api</artifactId>
+			<artifactId>lecm-security-api</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
