1) Реализовано добавление особого расписания (пока без красивого контрола выбора правил повторяемости). 2) Избавился ото всех *.head.ftl виду того, что в версии 4.2 разработчики рекомендуют от них избавляться и вообще они в некоторых условиях могут вызывать ошибки в некоторых браузерах. 3) Косметитеские правки интерфейса: причесаны метки для кнопок, заголовки страниц, поля в формах сгруппированы. 4) Запрещен множественный сотрудников/огр. единиц выбор в контроле при создании нового расписания.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1102 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/repo/src/main/config/messages/calendar.properties
+++ b/lecm-calendar/repo/src/main/config/messages/calendar.properties
@@ -46,8 +46,8 @@ lecm-shed_shedule-model.type.lecm-shed_shedule.title=Shedule
 #<property name="lecm-shed:type">
 lecm-shed_shedule-model.property.lecm-shed_type.title=Shedule type
 #<constraint name="lecm-shed:shedule-types-constraint" type="LIST">
-listconstraint.lecm-shed_shedule-types-constraint.COMMON=Common shedule
-listconstraint.lecm-shed_shedule-types-constraint.SPECIAL=Special Shedule
+listconstraint.lecm-shed_shedule-types-constraint.COMMON=Common
+listconstraint.lecm-shed_shedule-types-constraint.SPECIAL=Special
 #<property name="lecm-shed:std-begin">
 lecm-shed_shedule-model.property.lecm-shed_std-begin.title=Work beginning
 #<property name="lecm-shed:std-end">
