--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
@@ -1,14 +1,14 @@
-page.wcalendar.title=Work time calendar
+page.wcalendar.title=Work Calendar > Work time calendar
 page.wcalendar.description=Work time calendar
 page.wcalendar.filteredLabel=(content filtered)
 
 header.wcalendar.label=Work Calendar
 header.wcalendar.description=Work time calendar
 
-page.absence.title=Absence
+page.absence.title=Work Calendar > Absence
 page.absence.description=Employee absence
 
-page.shedule.title=Shedule
+page.shedule.title=Work Calendar > Shedule
 page.shedule.description=Worktime shedule
 
 button.new-year=New calendar
@@ -31,5 +31,18 @@ button.new-special-shedule=New special shedule
 
 message.time-format.error=Illegal time format
 
-label.form.picker.orgstructure=Organisation unit
-label.form.picker.employees=Employees
+label.shedule.form.picker.orgstructure=Organisation unit
+label.shedule.form.picker.employee=Employee
+label.shedule.picker.parent-shedule=Parent shedule
+
+label.shedule.form.set.date-interval=Shedule interval
+label.shedule.form.set.date-interval.begin=From
+label.shedule.form.set.date-interval.end=to
+label.shedule.form.set.work-time=Work time
+label.shedule.form.shift-work-type=Shift work
+label.shedule.form.week-days-type=Week days
+label.shedule.form.month-days-type=Month days
+label.shedule.form.workind-days-amount=Working days
+label.shedule.form.workind-days-interval=Interval
+label.shedule.form.month-days=Month days
+
