--- a/lecm-notifications-active-channel/share/src/main/java/ru/it/lecm/notifications/notifications.properties
+++ b/lecm-notifications-active-channel/share/src/main/java/ru/it/lecm/notifications/notifications.properties
@@ -3,3 +3,4 @@ header.notifications.description=Notifications
 
 notifications=Notifications
 notifications.button.close=Close
+notifications.link.more=More
