была стрелочка, стал уголок )
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1126 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
+++ b/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
@@ -4,7 +4,7 @@ page.delegation-list.filteredLabel=(content filtered)
 
 header.my-delegation-opts.label=Delegate authority
 header.my-delegation-opts.description=My delegation options
-page.delegation-opts.title=Delegation -> delegation options
+page.delegation-opts.title=Delegation > delegation options
 page.delegation-opts.filteredLabel=(content filtered)
 
 header.delegation.label=Delegation
