1) Добавлен красивый контрол выбора правил повторения при создании особого графика работы. 2) В боковое меню календаря временно добавлены более подходящие иконки.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1127 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
@@ -40,9 +40,11 @@ label.shedule.form.set.date-interval.begin=From
 label.shedule.form.set.date-interval.end=to
 label.shedule.form.set.work-time=Work time
 label.shedule.form.shift-work-type=Shift work
-label.shedule.form.week-days-type=Week days
-label.shedule.form.month-days-type=Month days
+label.shedule.form.week-days-type=Every week
+label.shedule.form.month-days-type=Every month
 label.shedule.form.workind-days-amount=Working days
 label.shedule.form.workind-days-interval=Interval
 label.shedule.form.month-days=Month days
-
+label.shedule.form.shift-work.working-days=Workin days
+label.shedule.form.shift-work.non-working-days=Non-working days
+label.shedule.form.reiteration-rules=Reiteration rules
