[+] ALF-303 Автоматическая архивация бизнес-журнала
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1132 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/repo/src/main/config/messages/business-journal.properties
+++ b/lecm-business-journal/repo/src/main/config/messages/business-journal.properties
@@ -64,3 +64,10 @@ lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-second
 
 lecm-busjournal-aspects_businessJournalAspectsModel.property.lecm-busjournal-aspects_history-list.title=History
 lecm-busjournal-aspects_businessJournalAspectsModel.property.lecm-busjournal-aspects_history-list.description=History
+
+lecm-busjournal_businessJournalModel.type.lecm-busjournal_archiverSettings.title=Archiver Setings
+lecm-busjournal_businessJournalModel.type.lecm-busjournal_archiverSettings.description=Archiver Setings
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_archiver-deep.title=Deep
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_archiver-deep.description=Deep
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_archiver-period.title=Period in Days
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_archiver-period.description=Period in Days
