--- a/lecm-business-journal/share/src/main/java/ru/it/lecm/business-journal/form/form.properties
+++ b/lecm-business-journal/share/src/main/java/ru/it/lecm/business-journal/form/form.properties
@@ -1,6 +1,6 @@
-page.business-journal=Business Journal
+page.business-journal=Business Journal > Summary Log
 page.business-journal.filter.label=(content filtered)
-
+page.business-journal-settings=Business Journal > Archiver Settings
 
 header.business-journal.label=Business Journal
 header.business-journal.description=Business Journal
@@ -13,3 +13,6 @@ lecm-busjournal_secondary-objects=Secondary Objects
 business-journal.archive=Archive
 button.archive=Archive
 archive.date = Archive older then
+
+lecm-busjournal-archiver-deep-help-id=Deep
+lecm-busjournal-archiver-archiver-period-help-id=Period in Days
