--- a/lecm-notifications-dashlet/repo/pom.xml
+++ b/lecm-notifications-dashlet/repo/pom.xml
@@ -63,6 +63,10 @@
 		    <artifactId>orgstructure-repo-api</artifactId>
 		    <version>${project.version}</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz</artifactId>
+	    </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
