была стрелочка, стал уголок )
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1144 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
+++ b/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
@@ -1,5 +1,5 @@
 header.delegation-list.description=Delegation list
-page.delegation-list.title=Delegation -> delegation list
+page.delegation-list.title=Delegation > delegation list
 page.delegation-list.filteredLabel=(content filtered)
 
 header.my-delegation-opts.label=Delegate authority
