Переработка кнопки В архив
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1151 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/share/src/main/java/ru/it/lecm/business-journal/form/form.properties
+++ b/lecm-business-journal/share/src/main/java/ru/it/lecm/business-journal/form/form.properties
@@ -16,3 +16,6 @@ archive.date = Archive older then
 
 lecm-busjournal-archiver-deep-help-id=Deep
 lecm-busjournal-archiver-archiver-period-help-id=Period in Days
+
+message.alert.no-elements=No elements
+message.alert.incorrect-date-format=Incorrect date format\!
