--- a/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/business-journal/toolbar/toolbar.get.properties
+++ b/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/business-journal/toolbar/toolbar.get.properties
@@ -19,3 +19,7 @@ menu.selected-items.delete=Delete
 menu.selected-items.deselect-all=Deselect All
 
 button.export-csv=Export CSV
+
+form.control.date-picker.choose=Choose a date
+form.control.date-picker.entry.date.format=d/M/yyyy
+form.control.date-picker.display.date.format=DD/MM/YYYY
