--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -13,7 +13,7 @@ lecm-stmeditor_model.property.lecm-stmeditor_outputWorkflowVariableValue.title=V
 lecm-stmeditor_model.property.lecm-stmeditor_transitionWorkflowId.title=Workflow
 lecm-stmeditor_model.property.lecm-stmeditor_workflowLabel.title=Title
 lecm-stmeditor_model.property.lecm-stmeditor_assignee.title=Assignee
-lecm-stmeditor_model.property.lecm-stmeditor_startStatus.title=Start Status
+lecm-stmeditor_model.property.lecm-stmeditor_forDraft.title=For Draft
 lecm-stmeditor_model.property.lecm-stmeditor_archiveFolder.title=Archive Folder
 lecm-stmeditor_model.property.lecm-stmeditor_rolesFolder.title=Business Roles of Process
 lecm-stmeditor_model.property.lecm-stmeditor_creationDocument.title=Creator
