--- a/lecm-statemachine/repo/pom.xml
+++ b/lecm-statemachine/repo/pom.xml
@@ -67,6 +67,10 @@
 			<artifactId>lecm-security-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
 
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
