--- a/lecm-delegation/pom.xml
+++ b/lecm-delegation/pom.xml
@@ -16,6 +16,7 @@
 	<name>Logic ECM Delegation</name>
 
 	<modules>
+	    <module>api</module>
 		<module>repo</module>
 		<module>share</module>
 	</modules>
