1) Добавлен модуль lecm-user-profile со страницей для личных настроек: параметров делегирования и планирования отсутствия. 2) В правое верхее выпадающее меню добавлен пункт "Профиль пользователя", ведущий к модулю lecm-user-profile. 3) Из того же меню удален пункт "Мои делегирования". 4) lecm-calendar переименовал в соответствии с остальными модулями.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1172 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/share/pom.xml
+++ b/lecm-calendar/share/pom.xml
@@ -12,7 +12,7 @@
 
 	<artifactId>lecm-calendar-share</artifactId>
 	<packaging>amp</packaging>
-	<name>${project.artifactId}-${project.version}</name>
+	<name>Logic ECM Calendar Share</name>
 	<description>Calendar share module</description>
 
 	<properties>
