--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
@@ -48,3 +48,7 @@ label.shedule.form.month-days=Month days
 label.shedule.form.shift-work.working-days=Workin days
 label.shedule.form.shift-work.non-working-days=Non-working days
 label.shedule.form.reiteration-rules=Reiteration rules
+
+label.wcalendar.menu.calendar.btn=Work time calendar
+label.wcalendar.menu.shedule.btn=Shedule
+label.wcalendar.menu.absence.btn=Emloyee absence
