--- a/lecm-user-profile/pom.xml
+++ b/lecm-user-profile/pom.xml
@@ -10,14 +10,14 @@
 		<version>0.1.0</version>
 	</parent>
 
-	<groupId>ru.it.lecm.calendar</groupId>
-	<artifactId>lecm-calendar</artifactId>
+	<groupId>ru.it.lecm.user-profile</groupId>
+	<artifactId>lecm-user-profile</artifactId>
 	<packaging>pom</packaging>
-	<name>Logic ECM Calendar</name>
-	<description>Calendar module</description>
+	<name>Logic ECM User Profile</name>
+	<description>User profile module</description>
 
 	<modules>
-		<module>repo</module>
+		<!--<module>repo</module>-->
 		 <module>share</module>
 	</modules>
 </project>
