--- a/lecm-user-profile/share/pom.xml
+++ b/lecm-user-profile/share/pom.xml
@@ -5,15 +5,15 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>ru.it.lecm.calendar</groupId>
-		<artifactId>lecm-calendar</artifactId>
+		<groupId>ru.it.lecm.user-profile</groupId>
+		<artifactId>lecm-user-profile</artifactId>
 		<version>0.1.0</version>
 	</parent>
 
-	<artifactId>lecm-calendar-repo</artifactId>
+	<artifactId>lecm-user-profile-share</artifactId>
 	<packaging>amp</packaging>
-	<name>Logic ECM Calendar Repo</name>
-	<description>Calendar repo module</description>
+	<name>Logic ECM User Profile Share</name>
+	<description>User Profile share module</description>
 
 	<properties>
 		<module.log.level>debug</module.log.level>
@@ -25,38 +25,18 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.alfresco</groupId>
-			<artifactId>alfresco-core</artifactId>
+			<artifactId>alfresco-share</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.alfresco</groupId>
-			<artifactId>alfresco-repository</artifactId>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.alfresco</groupId>
-			<artifactId>alfresco-data-model</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.extensions.surf</groupId>
-			<artifactId>spring-surf</artifactId>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
 		</dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>ru.it.lecm.orgstructure</groupId>
-			<artifactId>orgstructure-repo-api</artifactId>
-			<version>0.1.0</version>
-			<scope>provided</scope>
-		</dependency>
 	</dependencies>
-
-	<scm>
-		<connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk</connection>
-		<developerConnection>scm:svn:https://vmalygin@datateh.ru/alfrescoecm/Business Platform/trunk/</developerConnection>
-		<url>https://svn.datateh.ru/alfrescoecm/Business Platform/trunk</url>
-	</scm>
 
 	<build>
 		<plugins>
@@ -66,8 +46,8 @@
 				<artifactId>maven-resources-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>org.alfresco.maven</groupId>
 				<artifactId>maven-nosnapshot-plugin</artifactId>
+				<groupId>org.alfresco.maven</groupId>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -76,11 +56,19 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 			</plugin>
+			<!--<plugin>-->
+				<!--<groupId>net.alchim31.maven</groupId>-->
+				<!--<artifactId>yuicompressor-maven-plugin</artifactId>-->
+			<!--</plugin>-->
 			<plugin>
 				<groupId>org.alfresco.maven.plugin</groupId>
 				<artifactId>maven-amp-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<!--
+			Copies and filters resources in build folder so maven-amp-plugin can
+			pick them up
+		-->
 		<resources>
 			<resource>
 				<filtering>true</filtering>
@@ -89,11 +77,13 @@
 					<exclude>**README-*</exclude>
 				</excludes>
 			</resource>
-			<!--
-				Copies and filters AMP config in the proper package
-				'alfresco/module/${project.artifactId}' so to enforce full module
-				naming single sourcing from POM properties
-			-->
+			<resource>
+				<filtering>true</filtering>
+				<directory>src/main/java</directory>
+				<excludes>
+					<exclude>**.java</exclude>
+				</excludes>
+			</resource>
 			<resource>
 				<filtering>true</filtering>
 				<directory>src/main/config</directory>
