--- a/lecm-user-profile/share/src/main/config/log4j.properties
+++ b/lecm-user-profile/share/src/main/config/log4j.properties
@@ -40,4 +40,4 @@
 
 log4j.logger.org.alfresco.web.scripts=debug
 log4j.logger.org.alfresco.repo.web.scripts=debug
-log4j.logger.ru.it.lecm.calendar=${module.log.level}
+log4j.logger.ru.it.lecm.user-profile=${module.log.level}
