названия всех пропертей и ассоциаций вынес в интерфейс IDelegation добавил в модель доверенности еще одно property - передавать права на документы подчиненных немного поправил верстку карточки с настройками делегирования в таблицу с доверенностями добавил столбец "передавать права на документы подчиненных"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1175 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/repo/src/main/config/messages/delegation.properties
+++ b/lecm-delegation/repo/src/main/config/messages/delegation.properties
@@ -15,6 +15,7 @@ lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-assoc.description
 
 #<type name="lecm-d8n:procuracy">
 lecm-d8n_delegation-model.type.lecm-d8n_procuracy.title=Procuracy
+lecm-d8n_delegation-model.property.lecm-d8n_procuracy-can-transfer-rights.title=Transfer rights to subordinate documents
 lecm-d8n_delegation-model.association.lecm-d8n_procuracy-business-role-assoc.title=Business role
 lecm-d8n_delegation-model.association.lecm-d8n_procuracy-business-role-assoc.description=Link to business role
 lecm-d8n_delegation-model.association.lecm-d8n_procuracy-trustee-assoc.title=Trustee employee
