[+] ALF-377. Изменение поведения финального статуса.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1181 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -32,6 +32,7 @@ lecm-stmeditor_model.property.lecm-stmeditor_startStartWorkflow.title=Start work
 lecm-stmeditor_model.property.lecm-stmeditor_startScriptAction.title=Script execution on state start
 lecm-stmeditor_model.property.lecm-stmeditor_endStartWorkflow.title=Start workflow on state finish
 lecm-stmeditor_model.property.lecm-stmeditor_endScriptAction.title=Script execution on state finish
+lecm-stmeditor_model.property.lecm-stmeditor_endEventScriptAction.title=Script execution on state finish
 
 lecm-stmeditor_model.property.lecm-stmeditor_scriptLabel.title=Title
 lecm-stmeditor_model.property.lecm-stmeditor_actionScript.title=Script
