dashlets help text
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1182 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dashlet-business-journal/business-journal.get.properties
+++ b/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dashlet-business-journal/business-journal.get.properties
@@ -16,5 +16,5 @@ label.select.all=All
 
 label.no.records = No records
 
-dashlet.help=
+dashlet.help=<p>Dashlet "Business Journal" is designed to keep track of Business Journal records, produced by functional modules and external components.</p>
 dashlet.help.tooltip=Show help
