--- a/lecm-notifications-dashlet/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/notifications.get.properties
+++ b/lecm-notifications-dashlet/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/notifications.get.properties
@@ -10,5 +10,5 @@ label.select.all=All
 
 label.no.records = No records
 
-dashlet.help=
+dashlet.help=<p>"Notifications" dashlet let you getting info messages about different things\: new documents, document status changes, alerts, and so on.</p>
 dashlet.help.tooltip=Show help
