валидатор для проверки того, что права руководителя можно передавать только одному сотруднику
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1188 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
+++ b/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
@@ -11,3 +11,5 @@ header.delegation.label=Delegation
 header.delegation.description=Delegation
 page.delegation.title=Delegation
 page.delegation.filteredLabel=(content filtered)
+
+message.can-transfer-rights.error=You can transfer rights to only one
