--- a/lecm-delegation/repo/src/main/config/messages/delegation.properties
+++ b/lecm-delegation/repo/src/main/config/messages/delegation.properties
@@ -15,7 +15,7 @@ lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-assoc.description
 
 #<type name="lecm-d8n:procuracy">
 lecm-d8n_delegation-model.type.lecm-d8n_procuracy.title=Procuracy
-lecm-d8n_delegation-model.property.lecm-d8n_procuracy-can-transfer-rights.title=Transfer rights to subordinate documents
+lecm-d8n_delegation-model.property.lecm-d8n_procuracy-can-transfer-rights.title=Transfer boss rights
 lecm-d8n_delegation-model.association.lecm-d8n_procuracy-business-role-assoc.title=Business role
 lecm-d8n_delegation-model.association.lecm-d8n_procuracy-business-role-assoc.description=Link to business role
 lecm-d8n_delegation-model.association.lecm-d8n_procuracy-trustee-assoc.title=Trustee employee
@@ -23,7 +23,7 @@ lecm-d8n_delegation-model.association.lecm-d8n_procuracy-trustee-assoc.descripti
 
 #<type name="lecm-d8n:delegation-opts">
 lecm-d8n_delegation-model.type.lecm-d8n_delegation-opts.title=Delegation options
-lecm-d8n_delegation-model.property.lecm-d8n_delegation-opts-can-transfer-rights.title=Transfer rights to subordinate documents
+lecm-d8n_delegation-model.property.lecm-d8n_delegation-opts-can-transfer-rights.title=Transfer boss rights
 lecm-d8n_delegation-model.property.lecm-d8n_delegation-opts-can-delegate-all.title=Delegate all functions
 lecm-d8n_delegation-model.property.lecm-d8n_delegation-opts-status.title=Status
 lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-owner-assoc.title=owner employee
