[~]lсписок категорий событий вынесен в Enum [+] добавлено логирование в машину состояний
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1190 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine/repo/pom.xml
+++ b/lecm-statemachine/repo/pom.xml
@@ -71,7 +71,11 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
-
+        <dependency>
+            <groupId>ru.it.lecm.business-journal</groupId>
+            <artifactId>business-journal-repo-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
