Подписки. В форме расширенного поика изменил название "Активный" на "Искать в архиве"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1198 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/share/src/main/java/ru/it/lecm/business-journal/form/form.properties
+++ b/lecm-business-journal/share/src/main/java/ru/it/lecm/business-journal/form/form.properties
@@ -19,3 +19,5 @@ lecm-busjournal-archiver-archiver-period-help-id=Period in Days
 
 message.alert.no-elements=No elements
 message.alert.incorrect-date-format=Incorrect date format\!
+
+info.search.archive=Search in archive
