1) Удалены лишние сущности из модели данных для отсутствия. 2) Реализовано добавление и удаление отсутствия в Профиле пользователя и в разделе для технолога. 3) Реализован словарь "Причины отсутствия". 4) Добавлен контрол для выбора цвета отображения в словаре "Причины отсутствия". 5) Добавлены заголовки для форм создания календарей, графиков работы и отсутствий. 6) Косметические правки: изменены названия и метки в Профиле пользователя.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1201 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
@@ -19,6 +19,8 @@ label.edit-row.title=Edit element
 label.create-row.title=Create
 label.working-days-section.title=Working days
 label.non-working-days-section.title=Non-working days
+label.calendar.create-new-working.title=New working day
+label.calendar.create-new-non-working.title=New non-working day
 
 message.new-row.success=Element created successfully
 message.new-row.failure=Error creating element
@@ -48,7 +50,15 @@ label.shedule.form.month-days=Month days
 label.shedule.form.shift-work.working-days=Workin days
 label.shedule.form.shift-work.non-working-days=Non-working days
 label.shedule.form.reiteration-rules=Reiteration rules
+label.shedule.create-new-special.title=New special shedule
+label.shedule.create-new-common.title=New common shedule
 
 label.wcalendar.menu.calendar.btn=Work time calendar
 label.wcalendar.menu.shedule.btn=Shedule
 label.wcalendar.menu.absence.btn=Emloyee absence
+
+label.absence.form.set.date-interval=Date settings
+button.new-my-absence=Add my absence
+button.new-employee-absence=Add employee absence
+label.absence.create-my-absence.title=My new absence
+label.absence.create-emloyee-absence.title=New employee absence
