--- a/lecm-user-profile/share/src/main/java/ru/it/lecm/user-profile/form/form.properties
+++ b/lecm-user-profile/share/src/main/java/ru/it/lecm/user-profile/form/form.properties
@@ -1,8 +1,8 @@
-page.user-profile.absence.title=User profile > Absence
+page.user-profile.absence.title=My profile > Absence
 page.user-profile.absence.description=Manage your future absence
 page.user-profile.filteredLabel=(content filtered)
-label.user-profile.menu.absence.btn=Absence
-label.user-profile.menu.delegation.btn=Delegation
-header.user-profile.label=User profile
+label.user-profile.menu.absence.btn=Manage my future absence
+label.user-profile.menu.delegation.btn=Manage my delegayion settings
+header.user-profile.label=Logic ECM: My profile
 header.user-profile.description=Manage your personal settings
-page.user-profile.delegation.title=User profile > Delegation
+page.user-profile.delegation.title=My profile > Delegation
