Подписки. Подправлены названия форме создания и редактирования.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1210 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions.properties
+++ b/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions.properties
@@ -18,3 +18,5 @@ header.subscriptions.label=Subscriptions
 header.subscriptions.description=Subscriptions
 info.destination=Recipients
 info.notification=Delivery methods
+
+label.form.cm-name=Name
