--- a/lecm-subscriptions/repo/pom.xml
+++ b/lecm-subscriptions/repo/pom.xml
@@ -69,6 +69,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>ru.it.lecm.subscriptions</groupId>
+			<artifactId>subscriptions-repo-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
