--- a/lecm-subscriptions/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/subscriptions/subscriptions.type.grid.get.properties
+++ b/lecm-subscriptions/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/subscriptions/subscriptions.type.grid.get.properties
@@ -11,6 +11,7 @@ message.details.success=Data Item updated successfully
 message.details.failure=Could not update Data Item
 message.confirm.delete.title=Delete Item
 message.confirm.delete.description=Are you sure you want to delete this item?
+message.confirm.delete.group.description=Are you sure you want to delete items?
 message.create.refresh.failure=The Data Item was created, but it's details could not be retrieved
 message.delete.success=Item was deleted
 message.delete.failure=Could not delete item
