Добавлена страница, говорящая про недостаток прав.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1229 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
@@ -61,4 +61,4 @@ label.absence.form.set.date-interval=Date settings
 button.new-my-absence=Add my absence
 button.new-employee-absence=Add employee absence
 label.absence.create-my-absence.title=My new absence
-label.absence.create-emloyee-absence.title=New employee absence
+label.absence.create-employee-absence.title=New employee absence
