--- a/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
+++ b/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
@@ -13,3 +13,5 @@ page.delegation.title=Delegation
 page.delegation.filteredLabel=(content filtered)
 
 message.can-transfer-rights.error=You can transfer rights to only one
+
+form.button.submit.label=Save
